complete the practice page

--- a/practice-area.html
+++ b/practice-area.html
@@ -76,8 +76,247 @@
     </div>
     <!-- Practice area head wrap -->
 
+    <!-- Personal Injury -->
+    <div class="injury-head-sec">
+        <div class="container">
+            <h1 class="common-head">personal Injury</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="injury-content">
+                <p>
+                    Even minor injuries can evolve into more substantial harm in the long run. We want to ensure that you receive the healthcare you need for your injuries now, the immediate future, and long-term if necessary.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="personal-injury-img">
+                <img src="img/Practice-area/personal-injury-img.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Personal Injury -->
 
-    !-- contact -->
+    <!-- slip and fall -->
+    <div class="slip-sec">
+        <div class="container">
+            <h1 class="common-head">Slip and Fall</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="slip-content">
+                <p>
+                    Under California law, a slip-and-fall injury claim can be filed only within a finite period of time, so it is in your best interest to act quickly. Let the Maineri Law Firm handle your case and seek the justice and compensation you deserve.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="slip-and-fall-img">
+                <img src="img/Practice-area/slip-and-fall-img.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- slip and fall -->
+
+    <!-- Animal attack -->
+    <div class="injury-head-sec">
+        <div class="container">
+            <h1 class="common-head">Animal Attack</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="injury-content">
+                <p>
+                    It is not unusual for animal attack victims to require years of medical attention and psychiatric care. Often the psychological harm can be even more destructive than the physical injuries.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="personal-injury-img">
+                <img src="img/Practice-area/animal attack.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- animal Attack -->
+
+    <!-- Truck axident -->
+    <div class="slip-sec">
+        <div class="container">
+            <h1 class="common-head">Trucking Accidents</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="slip-content">
+                <p>
+                    Trucking accidents are more common than one would imagine. Accidents such as these have devastating consequences. We are here to guide you through every step of the legal process.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="slip-and-fall-img">
+                <img src="img/Practice-area/truck-accident.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Truck axident -->
+
+    <!-- Animal attack -->
+    <div class="injury-head-sec">
+        <div class="container">
+            <h1 class="common-head">Vehicle vs. Pedestrian</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="injury-content">
+                <p>
+                    Being struck by a vehicle is devastating and can result in severe injury and financial burden. The Maineri Law Firm knows how to analyze the circumstances of an accident to determine fault, properly place liability, and get the recovery our clients deserve.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="personal-injury-img">
+                <img src="img/Practice-area/vehicle.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- animal Attack -->
+
+    <!-- Truck axident -->
+    <div class="slip-sec">
+        <div class="container">
+            <h1 class="common-head">Motorcycle Accidents</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="slip-content">
+                <p>
+                    During motorcycle accidents, victims often hit the pavement or road barriers. These impacts can lead to serious, even life-threatening spinal cord and brain injuries. Allow the Maineri Law Firm to handle your injury claim so that you can focus on your recovery.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="slip-and-fall-img">
+                <img src="img/Practice-area/motorcycle.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Truck axident -->
+
+    <!-- Animal attack -->
+    <div class="injury-head-sec">
+        <div class="container">
+            <h1 class="common-head">Wrongful Death</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="injury-content">
+                <p>
+                    In the state of California, many people do not know where to turn for legal advice following the unexpected, accidental death of a loved one. Although every wrongful death claim is different, You can rest assured that as a client of the Maineri Law Firm, your case will be handled with utmost care and thoroughness. 
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="personal-injury-img">
+                <img src="img/Practice-area/wrongful-death.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- animal Attack -->
+
+    <!-- Truck axident -->
+    <div class="slip-sec">
+        <div class="container">
+            <h1 class="common-head">Car Accidents</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="slip-content">
+                <p>
+                    Unfortunately, car accidents happen when we least expect them. Regardless of the severity of the accident, whether it’s merely a ‘fender bender’ or serious accident resulting in fatality, we urge you to hire an attorney.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="slip-and-fall-img">
+                <img src="img/Practice-area/car-accidents.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Truck axident -->
+
+    <!-- Animal attack -->
+    <div class="injury-head-sec">
+        <div class="container">
+            <h1 class="common-head">Bicycle Accidents</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="injury-content">
+                <p>
+                    No matter how careful you are, bicycle-related accidents can still happen. At the Maineri Law Firm, we question every eyewitness and investigate each and every detail. We understand that both the witnesses’ recollections, as well as the on-site evidence, can fade or become useless very quickly following any roadside accident or any traffic collision. 
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="personal-injury-img">
+                <img src="img/Practice-area/bicycle-accidents.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- animal Attack -->
+
+    <!-- Truck axident -->
+    <div class="slip-sec">
+        <div class="container">
+            <h1 class="common-head">Bus Accidents</h1>
+            <div class="border-oliv"></div>
+        </div>
+    </div>
+    <section class="personal-injury">
+        <div class="container">
+            <div class="slip-content">
+                <p>
+                    If someone is injured due to a bus-related accident, they are entitled to get reimbursed completely for all their injury-related and medical treatment expenses under California law. At the Maineri Law Firm, we will study the details of your injury and accident thoroughly and discuss your legal options.
+                </p>
+                <button>
+                    LEARN-MORE
+                </button>
+            </div>
+            <div class="slip-and-fall-img">
+                <img src="img/Practice-area/bus-accident.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Truck axident -->
+
+    <!-- contact -->
     <section class="contact-us">
         <div class="container">
             <div class="contact-heading">
